RESOLVED FIXED69217
[chromium] Regression: Composited layers always draw with an identity transform
https://bugs.webkit.org/show_bug.cgi?id=69217
Summary [chromium] Regression: Composited layers always draw with an identity transform
Vangelis Kokkevis
Reported 2011-10-01 15:44:35 PDT
A regression caused by: http://trac.webkit.org/changeset/96454 TiledLayerChromium no longer updates the value of m_tiledTransform on the CCTiledLayerImpl. Computation of the tiledTransform was moved to the Impl but is not actually getting used at draw time.
Attachments
Patch (5.21 KB, patch)
2011-10-01 17:18 PDT, Vangelis Kokkevis
no flags
James Robinson
Comment 1 2011-10-01 17:02:03 PDT
d'oh, my bad for flipping bits too early. Can you revert?
Vangelis Kokkevis
Comment 2 2011-10-01 17:18:55 PDT
WebKit Review Bot
Comment 3 2011-10-01 19:20:56 PDT
Comment on attachment 109411 [details] Patch Clearing flags on attachment: 109411 Committed r96467: <http://trac.webkit.org/changeset/96467>
WebKit Review Bot
Comment 4 2011-10-01 19:21:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.