[chromium] Fixing draw matrix for composited layers. This was a regression introduced by: http://trac.webkit.org/changeset/96454

https://bugs.webkit.org/show_bug.cgi?id=69217

Reviewed by James Robinson.

Tests: compositor test now pass

* platform/graphics/chromium/cc/CCTiledLayerImpl.cpp:
(WebCore::CCTiledLayerImpl::draw):
* platform/graphics/chromium/cc/CCTiledLayerImpl.h:


Canonical link: https://commits.webkit.org/85229@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96467 268f45cc-cd09-0410-ab3c-d52691b4dbfc